Slider Component Alignment Fixed

--- a/frontend/app/schedule/page.css
+++ b/frontend/app/schedule/page.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-  --primary: #6a59ff;
+  --primary: #ffa200;
   --white: #ffffff;
   --bg: #f5f5f5;
 }
@@ -83,7 +83,6 @@ body {
   height: 100% !important;
   position: relative;
  padding: 20px;
-
 }
 
 @media (max-width: 500px) {
@@ -117,6 +116,7 @@ body {
 }
 
 .slider-controler {
+  
   position: relative;
   bottom: 2rem;
   display: flex;
@@ -158,19 +158,15 @@ body {
 }
 
 .slider-controler .slider-arrow {
-  background: var(--white);
   width: 3.5rem;
   height: 3.5rem;
   border-radius: 50%;
   left: 42%;
   transform: translateX(-42%);
-  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+
 }
 
-.slider-controler .slider-arrow ion-icon {
-  font-size: 2rem;
-  color: #222224;
-}
+
 
 .slider-controler .slider-arrow::after {
   content: '';
@@ -183,7 +179,7 @@ body {
 }
 
 .swiper-pagination .swiper-pagination-bullet {
-  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+  filter: drop-shadow(0px 8px 24px rgba(255, 166, 0, 0.1));
 }
 
 .swiper-pagination .swiper-pagination-bullet-active {
